@@ -5,6 +5,7 @@
 - ADD: It's possible to save the created patch directly to the
        clipboard. (Will Dean)
 - ADD: Column header for TortoiseBlame. (Stefan)
+- CHG: The log message history is kept separately by repository. (Stefan)
 - CHG: The 'check for updates' dialog now is called
        'check for modifications' and doesn't contact the repository
        on startup but only on request. (Stefan)
